<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:id="@+id/hsv"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="100dp"
	android:layout_weight="0"
	android:fillViewport="true"
	android:measureAllChildren="false"
	android:scrollbars="none">
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp"
		android:orientation="vertical">

		<TextView
			android:id="@+id/text_view_question"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@android:color/black"
			android:textSize="20sp"
			android:text="@string/question"/>

		<RadioGroup
			android:id="@+id/radio_group"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_below="@+id/text_view_question">

			<RadioButton
				android:id="@+id/radio_button1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/option1"/>

			<RadioButton
				android:id="@+id/radio_button2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/option2"/>

			<RadioButton
				android:id="@+id/radio_button3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/option3"/>

			<RadioButton
				android:id="@+id/radio_button4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="50dp"
				android:text="@string/option4"/>

		</RadioGroup>
		<EditText
			android:visibility="gone"
			android:id="@+id/edit_text"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_below="@+id/text_view_question"/>

		<TextView
			android:id="@+id/text_view_category"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/category"
			android:textColor="@android:color/black"/>

		<Button
			android:id="@+id/button_confirm_next"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/submit"/>

		<Button
			android:id="@+id/button_end_quiz"
			android:onClick="endQuiz"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/okay"
			android:visibility="gone"/>

		<Button
			android:id="@+id/button_got_it"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_alignParentLeft="true"
			android:text="@string/correct"
			android:visibility="gone"/> 

		<Button
			android:id="@+id/button_failed_it"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_alignParentRight="true"
			android:text="@string/wrong"
			android:visibility="gone"/>

		<TextView
			android:id="@+id/question_feedback"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:textColor="@android:color/black"
			android:textSize="20sp"
			android:text="@string/feedback"
			android:visibility="gone"/>

		<TextView
			android:id="@+id/hidden_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:textColor="@android:color/black"
			android:textSize="20sp"
			android:visibility="invisible"
			android:focusable="true"
			android:focusableInTouchMode="true"/>
	</RelativeLayout>
</ScrollView>
